--- a/src/css/modal.css
+++ b/src/css/modal.css
@@ -40,3 +40,11 @@ ul.container_for_button{
     display: flex;
     flex-direction: row;
 }
+
+.ivisible{
+    visibility: visible;
+}
+
+.invisible{
+    visibility: hidden;
+}
